@@ -1,5 +1,9 @@
 2002-02-25  Eric Blake  <ebb9@email.byu.edu>
 
+	* src/double.cpp (operator>, operator<): Fix bug 2700.
+
+2002-02-25  Eric Blake  <ebb9@email.byu.edu>
+
 	* src/init.cpp (ProcessVariableInitializer): Fix bug 2702.
 
 2002-02-25  Eric Blake  <ebb9@email.byu.edu>
